# open-bldc

./: .gitignore  Makefile  README
art/: README
doc/: design-discussions.txt  openbldc_startup.dia
hardware/: .gitignore  COPYING  open-bldc.brd  open-bldc.lbr  open-bldc.sch
hardware/clogic/doc/: current_sensor.m
hardware/clogic/v0.1/: clogic.brd  clogic.sch
hardware/clogic/v0.2/: clogic.brd  clogic.sch
hardware/clogic/v0.3/: clogic.brd  clogic.sch
hardware/clogic/v1.1/: clogic.brd  clogic.sch
hardware/cpico_power/v0.1/: cpico_power.brd  cpico_power.sch
hardware/discarded/: COPYING
hardware/discarded/mini/: eagle.epf
hardware/discarded/normal/: open-bldc.sch
hardware/geda/: .gitignore  Makefile  gafrc  gsch2pcb.cfg  gschemrc  open-bldc.sch
hardware/geda/symbols/: Makefile  acs712.src  ir2101.src  jtag_10pin.src  lp2992.src  st662a.src  stm32f103xx_lqfp48.src  tinyconn10.src
hardware/jtag_adapter/: eagle.epf  jtag_adapter.brd  jtag_adapter.sch
hardware/lib/: fancy_jumpers.lbr  open-bldc.lbr
hardware/mini/: open-bldc.sch
hardware/normal/: open-bldc-fets-one-side.brd  open-bldc.brd  open-bldc.sch
hardware/onepiece/v0.1/: onepiece.brd  onepiece.sch
hardware/v0.1/: COPYING  Makefile  open-bldc.brd  open-bldc.lbr  open-bldc.sch
hardware/v0.1/complete/: eagle.epf  open-bldc.sch
hardware/v0.1/logic/: eagle.epf  open-bldc-logic-teardrops.brd  open-bldc-logic.brd  open-bldc-logic.sch
hardware/v0.1/panel/: Makefile  fabdwg.txt  layout.cfg  layout.def
hardware/v0.1/power/: eagle.epf  open-bldc-power-teardrops.brd  open-bldc-power.brd  open-bldc-power.sch
hardware/v0.1/powermini/: open-bldc-powermini.brd  open-bldc-powermini.sch
hardware/v0.2/complete/: open-bldc.sch
hardware/v0.2/logic/: logic.brd  logic.sch
hardware/v0.3/logic/: logic.brd  logic.sch
hardware/v0.3/power/: power.brd  power.sch
hardware/v0.3/power_driver/: power_driver.brd  power_driver.sch
source/: .gitignore  Makefile
source/breadboard_prototype/: Makefile  README
source/breadboard_prototype/src/: Makefile  adc.c  adc.h  config.h  exceptions.c  exceptions.h  interrupts.c  interrupts.h  main.c  main.h  pwm.c  pwm.h  pwm_scheme_12step_pwm_on_pwm.c  pwm_scheme_12step_pwm_on_pwm.h  pwm_scheme_6step_h_on_l_pwm.c  pwm_scheme_6step_h_on_l_pwm.h  pwm_scheme_6step_h_pwm_l_on.c  pwm_scheme_6step_h_pwm_l_on.h  pwm_scheme_6step_on_pwm.c  pwm_scheme_6step_on_pwm.h  pwm_scheme_6step_pwm_on.c  pwm_scheme_6step_pwm_on.h  pwm_scheme_6step_simple.c  pwm_scheme_6step_simple.h  pwm_schemes.h  pwm_utils.c  pwm_utils.h  soft_timer.c  soft_timer.h  usart.c  usart.h  vector_table.c  vector_table.h
source/conf/: clogic-v1_1-board-config.yaml  mc-config.yaml  test_32bit_tim-config.yaml  test_blink-config.yaml  test_can-config.yaml  test_ext_flash-config.yaml  test_governor-config.yaml  test_sys_tick-config.yaml
source/firmware/: Makefile  Makefile.targets  README  doxygen.conf  doxygen_header.html
source/firmware/doc/: .gitignore
source/firmware/driver/: 32bit_tim.c  32bit_tim.h  adc.c  adc.h  bemf_hardware_detect.c  bemf_hardware_detect.h  can.c  can.h  debug_pins.c  debug_pins.h  ext_flash.c  ext_flash.h  i2c1.c  i2c1.h  led.c  led.h  macro_utils.h  mcu.c  mcu.h  sys_tick.c  sys_tick.h  usart.c  usart.h
source/firmware/scripts/: black_magic_probe_flash.scr
source/firmware/src/: Makefile  Makefile.targets  adc.c  adc.h  bemf_hardware_detect.c  bemf_hardware_detect.h  comm_process.c  comm_process.h  comm_process_hardware.c  comm_process_sampling.c  comm_tim.c  comm_tim.h  config.h  control_process.c  control_process.h  cp_aligning.c  cp_aligning.h  cp_error.c  cp_error.h  cp_idle.c  cp_idle.h  cp_spinning.c  cp_spinning.h  cp_spinup.h  cp_spinup_2step.c  cp_spinup_modstep.c  cp_spinup_soft_timer.c  cpu_load_process.c  cpu_load_process.h  exceptions.c  exceptions.h  gprot.c  gprot.h  gprot_test_governor.c  led.c  led.h  led_fade.c  led_fade.h  main.c  main.h  (+21 more)
source/firmware/test/: 32bit_tim_main.c  32bit_tim_ref_tim.c  blink_main.c  can_main.c  debug_pins_main.c  ext_flash_main.c  governor_main.c  gprot_test_ext_flash.c  gprot_test_ext_flash.h  gprot_test_governor.c  sys_tick_main.c
source/firmware_32bit_timertest/: Makefile  README
source/firmware_blinktest/: Makefile  README
source/firmware_governortest/: Makefile  README
source/governor/: .gitignore  Makefile  config.h  defines.h  hexdump_tool.c  hexdump_tool.h  main.c  protocol.c  protocol.h  serial.c  serial.h  serial_ftd.c  serial_sim.c  types.h
source/libgovernor/: .gitignore  AUTHORS  Makefile  Makefile.am  README  autogen.sh  configure.ac
source/libgovernor/doc/: Makefile.am
source/libgovernor/inc/: Makefile.am
source/libgovernor/inc/lg/: gpdef.h  gprotc.h  ring.h
source/libgovernor/include/: Makefile.am
source/libgovernor/include/lg/: gpdef.h  gprotc.h  gprotm.h  ring.h  types.h
source/libgovernor/m4/: acinclude.m4
source/libgovernor/src/: Makefile  Makefile.am  gprotc.c  gprotm.c  ring.c
source/libgovernor/tests/: Makefile  Makefile.am  check_gprot_suite.c  check_gprot_suite.h  check_gprotc_suite.c  check_gprotc_suite.h  check_gprotm_suite.c  check_gprotm_suite.h  check_main.c  check_ring_suite.c  check_ring_suite.h  check_suites.h  check_utils.c  check_utils.h
source/obldc-tool/: Makefile  main.c  serial.c  serial.h  tools.c  tools.h
source/olconf/: Makefile
source/patches/: summon-arm-toolchain.patch
source/qgovernor/: .gitignore  connectdialog.cpp  connectdialog.h  connectdialog.ui  govconfig.cpp  govconfig.h  govconfigcheckbox.h  govconfigslider.h  govconfigspinbox.h  govconfigwidget.h  governorclient.cpp  governorclient.h  governorftdi.cpp  governorftdi.h  governormaster.cpp  governormaster.h  governorsimulator.cpp  governorsimulator.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocolmodel.cpp  protocolmodel.h  qgovernor.pro  qgovernor.qrc  registermodel.cpp  registermodel.h  simulator.cpp  simulator.h  simulator.ui  targetwidgetfactory.cpp  targetwidgetfactory.h
source/rgb-fade/: Makefile
source/rgb-fade/src/: led.c  (+6 more)
source/utils/: obldc_indent
(+269 files in other folders)
